--- a/css/hamburger-menu.css
+++ b/css/hamburger-menu.css
@@ -3,94 +3,103 @@
 
 
 
-.header_sp{
+.header_sp {
     display: none;
 }
 
 
 .hamburger-button {
-  display: flex; /* media query時にはflexでもどして */
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 1002;
-  background-color:#fff;
-/*      rgba(255, 255, 255, .7);*/
-  border: none;
-  cursor: pointer;
-  width: 40px;
-  height: 40px;
-  outline: none;
+    display: flex;
+    /* media query時にはflexでもどして */
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 1002;
+    background-color: #fff;
+    /*      rgba(255, 255, 255, .7);*/
+    border: none;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    outline: none;
+
 }
+
+
+
+
 .hamburger-button svg {
-  height: 25px; /* autoではなく同じ数字で */
-  width: 25px; /* autoではなく同じ数字で */
+    height: 25px;
+    /* autoではなく同じ数字で */
+    width: 25px;
+    /* autoではなく同じ数字で */
 }
+
 .hamburger-button path {
-  fill: #001E62;
+    fill: #001E62;
 }
+
 .hamburger-nav {
-  position: fixed;
-  width: 100%;
-  background-color:rgba(255, 255, 255, .95);
-  z-index: 1001;
-  padding: 20px;
-/*  display: none;*/
+    position: fixed;
+    width: 100%;
+    background-color: rgba(255, 255, 255, .95);
+    z-index: 1001;
+    padding: 20px;
+    /*  display: none;*/
 }
+
 #hamburger-overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0,0,0,.5);
-  pointer-events: none;
-  opacity: 0;
-  z-index: 1000;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
+    opacity: 0;
+    z-index: 1000;
 }
 
-.hamburger-button{
-  display: none;
+.hamburger-button {
+    display: none;
 }
 
 
-  .hamburger-nav {
+.hamburger-nav {
     height: 40vh;
-  }
+}
 
 @media screen and (max-width:480px) {
-      .hamburger-button {
-    display: flex;
-  
+    .hamburger-button {
+        display: flex;
+
 
     }
 
-.header_sp{
-    display: flex;
+    .header_sp {
+        display: flex;
 
-}
-    
-.header_sp nav li {
-    float: left;
-    margin-right: 50px;
-    margin-top: 30px;
-    list-style-type: none;
+    }
 
-}
+    .header_sp nav li {
+        margin-right: 50px;
+        margin-top: 30px;
+        list-style-type: none;
 
-.hamburger-nav a {
-    text-decoration: none;
-    font-size: 18px;
-    transition: 0.5s;
-    color: #001E62;
-    font-family: sans-serif;
-/*    background: red;*/
-}
-    
-    .header_sp ul{
-        background: blue;
+    }
+
+    .hamburger-nav a {
+        text-decoration: none;
+        font-size: 18px;
+        transition: 0.5s;
+        color: #001E62;
+        font-family: sans-serif;
+        /*    background: red;*/
+    }
+
+    .header_sp ul {
         width: 65%;
         margin: 0 auto;
     }
