--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,39 @@
     font-family: "游ゴシック体", YuGothic;
 }
 
+/*
+.loading {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0px;
+  left: 0px;
+  background: #000;
+  z-index: 9999;
+}
+
+ アニメーション 
+.animation {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: #fff;
+  -webkit-animation: loadinganimation 1500ms ease-out forwards infinite;
+  animation: loadinganimation 1500ms ease-out forwards infinite;
+}
+@keyframes loadinganimation {
+  from,to {
+		opacity: 0;
+  }
+  50% {
+		opacity: .5;
+  }
+}
+*/
+
 
 #header {
     position: fixed;
@@ -165,8 +198,9 @@
     .keio-title {
         top: 100px;
         left: 20px;
-        font-size: 26px;
+        font-size: 24px;
         width: 90%;
+        font-family: "游ゴシック体", YuGothic;
     }
 
     .rightimg-slider {
@@ -234,10 +268,15 @@
     /*    margin-bottom: 255px;*/
 }
 
+.aboutus-title{
+    margin-top: -20px;
+}
 
 .aboutus-title h2 {
     color: #D1322A;
     font-size: 25px;
+ font-family: "游ゴシック体";
+
 }
 
 .aboutus-title p {
@@ -250,7 +289,7 @@
     width: 380px;
     overflow: hidden;
     margin: 0 auto;
-    margin-top: 40px;
+    margin-top: 17px;
     padding-left: 30px;
 }
 
@@ -266,10 +305,11 @@
 .aboutus-notalone span {
     color: #D1322A;
     font-size: 70px;
+    font-family: sans-serif;
 }
 
 .aboutus-text {
-    margin-top: 45px;
+    margin-top: 27px;
     width: 380px;
     overflow: hidden;
     color: white;
@@ -289,7 +329,7 @@
     display: block;
     margin: 0 auto;
     width: 41%;
-    margin-top: 10px;
+    margin-top: 15px;
     padding: 10px;
     /*    z-index: 3;*/
     box-shadow: 0 0 15px rgba(0, 0, 0, .6);
@@ -301,6 +341,7 @@
 
 .katsudou-button:hover {
     background: #D1322A;
+
 }
 
 
@@ -313,6 +354,7 @@
     float: right;
     text-shadow: none;
     z-index: -2;
+    font-family: "游ゴシック体";
 }
 
 
@@ -354,6 +396,16 @@
 
 
     }
+    
+    .aboutus-title{
+        margin-top: 8px;
+
+    }
+    
+    .aboutus-title h2{
+        font-family: sans-serif;
+        font-size: 20px;
+    }
 
     .aboutus-notalone {
         width: 84%;
@@ -392,9 +444,16 @@
     }
 
     .about-class h5 {
-        font-size: 70px;
-        line-height: 100px;
+        font-size: 67px;
+        line-height: 65px;
+        font-family:sans-serif;
+        margin-top: -4px;
+        margin-left: -50px;
 
+    }
+    
+    .aboutus-title{
+        font-family: sans-serif;
     }
 
 
@@ -432,6 +491,7 @@
 .interview-title h2 {
     color: #D1322A;
     font-size: 80px;
+     font-family: "游ゴシック体";
 }
 
 .interview-title p {
@@ -479,6 +539,7 @@
     /*    position: absolute;*/
     position: relative;
     z-index: -2;
+     font-family: "游ゴシック体";
 
 }
 
@@ -504,6 +565,7 @@
 
     .interview-title h2 {
         font-size: 38px;
+       font-family: sans-serif;
     }
 
     .interview-title p {
@@ -543,6 +605,7 @@
         line-height: 100px;
         margin-top: -20px;
         margin-left: 60px;
+        font-family: sans-serif;
     }
 
     .sp_interview-flexbox {
@@ -636,6 +699,7 @@ body.fixed {
     color: #D1322A;
     font-size: 40px;
     line-height: 38px;
+   font-family: sans-serif;
 }
 
 
@@ -656,6 +720,7 @@ body.fixed {
 
 .modal_whitebox img {
     width: 34%;
+    height: 46vh;
     margin-left: 4%;
     margin-top: 1%;
 }
@@ -680,15 +745,18 @@ body.fixed {
 .modal_textbox h3 {
     color: #001E62;
     font-size: 30px;
+    font-family: sans-serif;
 }
 
 .modal_textbox h3 span {
     font-size: 18px;
+    font-family: sans-serif;
 }
 
 .modal_textbox p {
     color: #001E62;
     margin-top: 3%;
+    font-family: sans-serif;
 }
 
 .js-modal-close img {
@@ -708,7 +776,7 @@ body.fixed {
         height: 27vh;
         object-fit: cover;
         margin-left: 4%;
-        margin-top: 0;
+        margin-top: 10px;
     }
 
     .modal_whitebox {
@@ -738,6 +806,7 @@ body.fixed {
     .modal-interview-title h2 {
         font-size: 20px;
         line-height: 24px;
+        font-family:sans-serif;
     }
 
 
@@ -753,14 +822,17 @@ body.fixed {
 
     .modal_textbox h3 {
         font-size: 23px;
+        font-family: sans-serif;
     }
 
     .modal_textbox h3 span {
-        font-size: 12px
+        font-size: 12px;
+        font-family: sans-serif;
     }
 
     .modal_textbox p {
-        font-size: 13px
+        font-size: 13px;
+        font-family: sans-serif;
     }
 
     .js-modal-close img {
@@ -798,7 +870,7 @@ body.fixed {
 
 .freshmen-container {
     width: 80%;
-    height: 680px;
+    height: 700px;
     background-image: url("../image/forfreshmen.jpg");
     background-position: center center;
     background-repeat: no-repeat;
@@ -879,6 +951,7 @@ body.fixed {
 
 .pc_register-button:hover {
     background: #D1322A;
+    color: white;
 }
 
 .sp_register-button {
@@ -891,7 +964,7 @@ body.fixed {
     height: 32%;
     background: #EFF1F5;
     position: absolute;
-    bottom: 50px;
+    bottom: 20px;
     left: 7%;
     z-index: 2;
     box-shadow: -15px 20px 10px rgba(198, 53, 39, 0.5);
@@ -933,6 +1006,10 @@ body.fixed {
 /*freshmen-sectionのレスポンシブ*/
 
 @media screen and (max-width:480px) {
+    
+    *{
+        font-family: sans-serif;
+    }
 
     #freshmen-section {
         margin-top: 70px;
@@ -942,7 +1019,7 @@ body.fixed {
 
     .freshmen-container {
         width: 94%;
-        height: 475px;
+        height: 515px;
     }
 
     .freshmen-title {
@@ -981,7 +1058,7 @@ body.fixed {
 
     .freshmen-text h4 {
         padding-top: 30px;
-        font-size: 32px;
+        font-size: 26px;
         line-height: 40px;
     }
 
@@ -1006,11 +1083,12 @@ body.fixed {
         text-align: center;
         font-family: sans-serif;
         margin-left: 20px;
-        margin-top: 26px;
+        margin-top: 13px;
     }
 
     .sp_register-button:active {
-        background: pink;
+        background:#D1322A; 
+        color: white;
 
     }
 
@@ -1018,7 +1096,7 @@ body.fixed {
         width: 86%;
         height: 25%;
         left: 4%;
-        bottom: 16%;
+        bottom: 12%;
         box-shadow: -7px 10px 10px rgba(198, 53, 39, 0.5);
     }
 
